# multiscale-turing-pattern

./: .gitignore  CMakeLists.txt  README.md
src/: Color.h  MainWindow.cpp  MainWindow.h  PaintArea.cpp  PaintArea.h  RenderConfig.cpp  RenderConfig.h  RenderConfigWidget.h  Renderer.cpp  Renderer.h  Scale.h  ScaleConfig.cpp  ScaleConfig.h  ScaleConfigWidget.cpp  ScaleConfigWidget.h  StepConfig.cpp  StepConfig.h  main.cpp
src/view/: RenderConfigWidget.cpp  RenderConfigWidget.h  ScaleConfigWidget.cpp  ScaleConfigWidget.h  ScalesConfig.cpp  ScalesConfig.h
